# Combinatorials

./: .gitignore  README.md
Archiver/: Archiver.csproj  ArchiverProgram.cs  CMakeLists.txt  FileWork.cs  HuffmanTree.cs  Program.cs  Vertex.cs  config.json  config.yaml  etalon.arc  freq.txt  main.cpp
Archiver/include/: huffman_tree.hpp
Archiver/src/: huffman_tree.cpp
BranchAndBound/: CMakeLists.txt  ex.txt  main.cpp
Codes/: .~lock.134f06b0cf680ef1.doc#  1.txt  134f06b0cf680ef1.doc  ex.txt  main  main.cpp  main2.cpp
Data structures/Trie/: Trie.h
Data structures/Trie/src/: Vertex.cpp
Data structures/Trie/trie_headers/: Trie.h  Vertex.h
Data_structures/AATree/: CMakeLists.txt
Data_structures/AATree/headers/: AATree.h  Vertex.h
Data_structures/PriorityQueue/: CMakeLists.txt  main.cpp
Data_structures/PriorityQueue/headers/: PriorityQueue.h  Vertex.h
Data_structures/PriorityQueue/include/: PriorityQueue.h
Data_structures/Queue/: CMakeLists.txt  main.cpp
Data_structures/Queue/headers/: Queue.h
Data_structures/SegmentTree/: CMakeLists.txt  main.cpp
Data_structures/SegmentTree/headers/: SegmentTree.h
Data_structures/Trie/: CMakeLists.txt  main.cpp
Data_structures/Trie/headers/: Trie.h  Vertex.h
Data_structures/Trie/src/: Trie.cpp  Vertex.cpp
Data_structures/Trie/trie_headers/: Trie.h  Vertex.h
Tasks/Dynamic/: solve.py
Tasks/Enumeration/: main  main.cpp  task.txt
Tasks/Greedy/: Makefile  main.cpp
